# docker-project-template-py

./: README.md  build-docker  build_docker.sh  setup.cfg  setup.py
docker/: Dockerfile
src/example/: __init__.py  _version.py  dummy.py
src/huge/: dummy.py
tests/: test_dummy.py
