[metadata]
name = example
version = attr: example.__version__
description = Package example

# `name` must be the name of the package directory in `src/`.
# `__version__` is defined in the `__init__.py` file of the package.

[options]
include_package_data = True
package_dir = 
    = src
packages = find:

[options.packages.find]
where = src

[options.package_data]
example = py.typed

# The file `py.typed` in the top directory of the package
# as well as this section are needed if you use `mypy` to check
# code. Otherwise they are not needed.

[bdist_wheel]
universal=0
